# WBook

./: package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/server/: Cargo.toml
backend/shared/: Cargo.toml
backend/tauri/: Cargo.toml  tauri.conf.json
backend/tauri/capabilities/: migrated.json
backend/tauri/src/: lib.rs
backend/tauri/src/commands/: mod.rs
backend/wbook-core/: Cargo.toml
backend/wbook-core/src/: lib.rs
src/: router.ts
src-tauri/: Cargo.toml
src/types/: auto-imports.d.ts
