[package]
name = "wbook"
edition.workspace = true
version = "0.1.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]

wbook-core = { path = "../wbook-core" }
server = { path = "../server" }

tauri = { version = "2.1.1", features = [] }
portpicker = "0.1.1"

# workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tauri-plugin-shell = "2"
tauri-plugin-sentry = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
